--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@
     text-align: center;
     padding: 10%;
 }
+.icon{
+    width: 100px;
+    height: 100px;
+}
+.switch{
+    background-color: #aa7b04;
+    border-radius: 8px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 3px 2px;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
